--- a/community/coregarage/APKBUILD
+++ b/community/coregarage/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: rahmanshaber <rahmanshaber@yahoo.com>
 # Maintainer: rahmanshaber <rahmanshaber@yahoo.com>
 pkgname=coregarage
-pkgver=2.7.0
+pkgver=2.7.1
 pkgrel=0
 pkgdesc="A settings manager for the CoreApps family."
 arch="all"
@@ -9,7 +9,7 @@ url="https://gitlab.com/cubocore"
 license="GPL-3.0-or-later"
 depends="qt5-qtsvg"
 makedepends="qt5-qtbase-dev libcprime-dev libcsys-dev libarchive-qt-dev"
-source="$pkgname-$pkgver.tar.gz::https://gitlab.com/cubocore/$pkgname/-/archive/v$pkgver/$pkgname-v$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://gitlab.com/cubocore/coregarage/-/archive/v$pkgver/coregarage-v$pkgver.tar.gz"
 builddir="$srcdir/$pkgname-v$pkgver"
 options="!check"
 
@@ -21,4 +21,4 @@ build() {
 package() {
 	INSTALL_ROOT="$pkgdir" make install
 }
-sha512sums="aa309205b48dd01f1b5b66a26728208ea691e62adfd1f3bb7fbb1043068edadf77422693b08fdc9e5e874f4f744bbc947e913579b4f600a351a5660131f52395  coregarage-2.7.0.tar.gz"
+sha512sums="8b4b8a39a1ba5e6099c133b364eb8711368cbfb68b93f220af015df3e54a5adc700aa835a72eaf8fb30dae2b0de8cb0618822c80f34f992b12213f3a214ead4a  coregarage-2.7.1.tar.gz"
