--- a/community/corekeyboard/APKBUILD
+++ b/community/corekeyboard/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: rahmanshaber <rahmanshaber@yahoo.com>
 # Maintainer: rahmanshaber <rahmanshaber@yahoo.com>
 pkgname=corekeyboard
-pkgver=2.7.0
+pkgver=2.7.1
 pkgrel=0
 pkgdesc="A x11 based virtual keyboard from the CoreApps family."
 arch="all"
@@ -9,7 +9,7 @@ url="https://gitlab.com/cubocore"
 license="GPL-3.0-or-later"
 depends="qt5-qtsvg"
 makedepends="qt5-qtbase-dev qt5-qtx11extras-dev libcprime-dev libxtst-dev"
-source="$pkgname-$pkgver.tar.gz::https://gitlab.com/cubocore/$pkgname/-/archive/v$pkgver/$pkgname-v$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://gitlab.com/cubocore/corekeyboard/-/archive/v$pkgver/corekeyboard-v$pkgver.tar.gz"
 builddir="$srcdir/$pkgname-v$pkgver"
 options="!check"
 
@@ -22,4 +22,4 @@ build() {
 package() {
 	INSTALL_ROOT="$pkgdir" make install
 }
-sha512sums="78f3689a347e073f7d4ce1a5f7f28b0827fcad59836f8ad49abe708437320df99dd6f21a091083951ab2466cc76d599bed9996c901561d06b7ef401f79657d59  corekeyboard-2.7.0.tar.gz"
+sha512sums="5ce6959ae5d63cee1a1648e9513b9f02d5756b67a1fbe442a58ed01eea338884d4b58f9ca57b3a5f7454d08a12450914ff4d3bf23d8e791e17c49048bc94b7ab  corekeyboard-2.7.1.tar.gz"
