--- a/community/corepad/APKBUILD
+++ b/community/corepad/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: rahmanshaber <rahmanshaber@yahoo.com>
 # Maintainer: rahmanshaber <rahmanshaber@yahoo.com>
 pkgname=corepad
-pkgver=2.7.0
+pkgver=2.7.1
 pkgrel=0
 pkgdesc="A document editor from the CoreApps family."
 arch="all"
@@ -9,7 +9,7 @@ url="https://gitlab.com/cubocore"
 license="GPL-3.0-or-later"
 depends="qt5-qtsvg"
 makedepends="qt5-qtbase-dev libcprime-dev"
-source="$pkgname-$pkgver.tar.gz::https://gitlab.com/cubocore/$pkgname/-/archive/v$pkgver/$pkgname-v$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://gitlab.com/cubocore/corepad/-/archive/v$pkgver/corepad-v$pkgver.tar.gz"
 builddir="$srcdir/$pkgname-v$pkgver"
 options="!check"
 
@@ -21,4 +21,4 @@ build() {
 package() {
 	INSTALL_ROOT="$pkgdir" make install
 }
-sha512sums="bed1182f5fdf215f83145b5b29e57a33deaa53e7a202593a5e2877a18d8f6649c6e393dedce122d7a22b86462742da825e3fe47fb4fb07266f4c4381baff79c4  corepad-2.7.0.tar.gz"
+sha512sums="98f1591ca4a23cc1ab46cfec4cd227bdf2dac4451ace2d7f77bdd933c6527a7c43815bed2aeb39b2f7a76641fc4c992322882ad7240803030410258968db8ee7  corepad-2.7.1.tar.gz"
