--- a/community/corepaint/APKBUILD
+++ b/community/corepaint/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: rahmanshaber <rahmanshaber@yahoo.com>
 # Maintainer: rahmanshaber <rahmanshaber@yahoo.com>
 pkgname=corepaint
-pkgver=2.7.0
+pkgver=2.7.1
 pkgrel=0
 pkgdesc="A paint app from the CoreApps family."
 arch="all"
@@ -9,7 +9,7 @@ url="https://gitlab.com/cubocore"
 license="GPL-3.0-or-later"
 depends="qt5-qtsvg"
 makedepends="qt5-qtbase-dev libcprime-dev"
-source="$pkgname-$pkgver.tar.gz::https://gitlab.com/cubocore/$pkgname/-/archive/v$pkgver/$pkgname-v$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://gitlab.com/cubocore/corepaint/-/archive/v$pkgver/corepaint-v$pkgver.tar.gz"
 builddir="$srcdir/$pkgname-v$pkgver"
 options="!check"
 
@@ -21,4 +21,4 @@ build() {
 package() {
 	INSTALL_ROOT="$pkgdir" make install
 }
-sha512sums="631353b30c40bb9ab044a1164bae3e39eee28346a1e0654c8119a6c5fed9655523081030ab22e3f4de2d940341fc6c04a5b36e0b65110f50b5d9b84af8c6394c  corepaint-2.7.0.tar.gz"
+sha512sums="968a58e413743e1ce338afc8e0ba72eea147c75ab0f97afd6d76a01d1c54f6305c18a898901fdf629f30335af05c8014cb9b39cccd0ba1fd6d1195890ac7cb2d  corepaint-2.7.1.tar.gz"
