--- a/community/corepdf/APKBUILD
+++ b/community/corepdf/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: rahmanshaber <rahmanshaber@yahoo.com>
 # Maintainer: rahmanshaber <rahmanshaber@yahoo.com>
 pkgname=corepdf
-pkgver=2.7.0
+pkgver=2.7.1
 pkgrel=0
 pkgdesc="A PDF viewer from the CoreApps family."
 arch="all"
@@ -9,7 +9,7 @@ url="https://gitlab.com/cubocore"
 license="GPL-3.0-or-later"
 depends="qt5-qtsvg"
 makedepends="qt5-qtbase-dev libcprime-dev poppler-qt5-dev"
-source="$pkgname-$pkgver.tar.gz::https://gitlab.com/cubocore/$pkgname/-/archive/v$pkgver/$pkgname-v$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://gitlab.com/cubocore/corepdf/-/archive/v$pkgver/corepdf-v$pkgver.tar.gz"
 builddir="$srcdir/$pkgname-v$pkgver"
 options="!check"
 
@@ -21,4 +21,4 @@ build() {
 package() {
 	INSTALL_ROOT="$pkgdir" make install
 }
-sha512sums="247f255efe229e5d8eb6b4b97d65b88931cbb6b0b4e938f477caca7d48171f37cd3cf975dae1bcae8f919fc6cfec82579d4071271dd92d9ee8f5b1cccd149f54  corepdf-2.7.0.tar.gz"
+sha512sums="3c15d5591e9b5cc40b3170ab2a8e33a8a5075980241ba54cf6819906a2357f051ff974cbf746e238bedc8f2671953ecf864a605a1675de272337f19c118ab1ec  corepdf-2.7.1.tar.gz"
