--- a/community/corepins/APKBUILD
+++ b/community/corepins/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: rahmanshaber <rahmanshaber@yahoo.com>
 # Maintainer: rahmanshaber <rahmanshaber@yahoo.com>
 pkgname=corepins
-pkgver=2.7.0
+pkgver=2.7.1
 pkgrel=0
 pkgdesc="A bookmarking app from the CoreApps family."
 arch="all"
@@ -9,7 +9,7 @@ url="https://gitlab.com/cubocore"
 license="GPL-3.0-or-later"
 depends="qt5-qtsvg"
 makedepends="qt5-qtbase-dev libcprime-dev"
-source="$pkgname-$pkgver.tar.gz::https://gitlab.com/cubocore/$pkgname/-/archive/v$pkgver/$pkgname-v$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://gitlab.com/cubocore/corepins/-/archive/v$pkgver/corepins-v$pkgver.tar.gz"
 builddir="$srcdir/$pkgname-v$pkgver"
 options="!check"
 
@@ -21,4 +21,4 @@ build() {
 package() {
 	INSTALL_ROOT="$pkgdir" make install
 }
-sha512sums="ce214b46667baf9e48fed362cc0ab583f7fac225d56291e1ec4b86cc69457790e6dca55b94e17b4cd90b034290615ba67a00b78c23fe321b834f6c5372cdf515  corepins-2.7.0.tar.gz"
+sha512sums="f41c700ee992422dd2c693814490f555f72303df3ddc65b5c57a9f1a23b15ec2ba7e5de4d811a78e7388c3ffdf103f4954db1ac99e2e0cce82cb372e4eba0161  corepins-2.7.1.tar.gz"
