--- a/community/coreshot/APKBUILD
+++ b/community/coreshot/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: rahmanshaber <rahmanshaber@yahoo.com>
 # Maintainer: rahmanshaber <rahmanshaber@yahoo.com>
 pkgname=coreshot
-pkgver=2.7.0
+pkgver=2.7.1
 pkgrel=0
 pkgdesc="A screen capture utility from the CoreApps family."
 arch="all"
@@ -9,7 +9,7 @@ url="https://gitlab.com/cubocore"
 license="GPL-3.0-or-later"
 depends="qt5-qtsvg"
 makedepends="qt5-qtbase-dev libcprime-dev qt5-qtx11extras-dev"
-source="$pkgname-$pkgver.tar.gz::https://gitlab.com/cubocore/$pkgname/-/archive/v$pkgver/$pkgname-v$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://gitlab.com/cubocore/coreshot/-/archive/v$pkgver/coreshot-v$pkgver.tar.gz"
 builddir="$srcdir/$pkgname-v$pkgver"
 options="!check"
 
@@ -21,4 +21,4 @@ build() {
 package() {
 	INSTALL_ROOT="$pkgdir" make install
 }
-sha512sums="72127fc1c066078ac537f3d7f14518196ec4bba21729618377636e6648817dd28c9bc9b9734431f6a925d0e93d90b0091028ceaa969aeba80bfa1f8e3be77dde  coreshot-2.7.0.tar.gz"
+sha512sums="b402bec6587fc9af6d73666fbffd04c44edbf9e8951756b1142a7bf696ebe5ecef4b94f0a35ba7940855e279d20efb628bb9dfcc937b91ee954e5290b88e450f  coreshot-2.7.1.tar.gz"
