--- a/community/corestats/APKBUILD
+++ b/community/corestats/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: rahmanshaber <rahmanshaber@yahoo.com>
 # Maintainer: rahmanshaber <rahmanshaber@yahoo.com>
 pkgname=corestats
-pkgver=2.7.0
+pkgver=2.7.1
 pkgrel=0
 pkgdesc="A system resource viewer from the CoreApps family."
 arch="all"
@@ -9,7 +9,7 @@ url="https://gitlab.com/cubocore"
 license="GPL-3.0-or-later"
 depends="qt5-qtsvg"
 makedepends="qt5-qtbase-dev libcprime-dev libcsys-dev"
-source="$pkgname-$pkgver.tar.gz::https://gitlab.com/cubocore/$pkgname/-/archive/v$pkgver/$pkgname-v$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://gitlab.com/cubocore/corestats/-/archive/v$pkgver/corestats-v$pkgver.tar.gz"
 builddir="$srcdir/$pkgname-v$pkgver"
 options="!check"
 
@@ -21,4 +21,4 @@ build() {
 package() {
 	INSTALL_ROOT="$pkgdir" make install
 }
-sha512sums="739ca35e421cf790eb396399e8294fdb296523adacb9b9f6c35aefbcf4402eb1fd0fcb9ce16f1fafd242b88d822a52c9e072fc2e916807355efee499a95bc34d  corestats-2.7.0.tar.gz"
+sha512sums="fb7074766e241d89871efcde6a6f84421c65a0df49194143e83aa8d71c895885baa77c6965675ca6688fe32740cb5b7f819ec84d467534143bd46c901757b624  corestats-2.7.1.tar.gz"
