--- a/community/corestuff/APKBUILD
+++ b/community/corestuff/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: rahmanshaber <rahmanshaber@yahoo.com>
 # Maintainer: rahmanshaber <rahmanshaber@yahoo.com>
 pkgname=corestuff
-pkgver=2.7.0
+pkgver=2.7.1
 pkgrel=0
 pkgdesc="An activity viewer from the CoreApps family."
 arch="all"
@@ -9,7 +9,7 @@ url="https://gitlab.com/cubocore"
 license="GPL-3.0-or-later"
 depends="qt5-qtsvg"
 makedepends="qt5-qtbase-dev libcprime-dev qt5-qtx11extras-dev libxrender-dev libxcomposite-dev xcb-util-dev"
-source="$pkgname-$pkgver.tar.gz::https://gitlab.com/cubocore/$pkgname/-/archive/v$pkgver/$pkgname-v$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://gitlab.com/cubocore/corestuff/-/archive/v$pkgver/corestuff-v$pkgver.tar.gz"
 builddir="$srcdir/$pkgname-v$pkgver"
 options="!check"
 
@@ -21,4 +21,4 @@ build() {
 package() {
 	INSTALL_ROOT="$pkgdir" make install
 }
-sha512sums="f32da377ea2aae7b0e67eceda260cca77444f03c3939f315133fe0020ebe47c8ba05139e1a684ace58ecc6f8248da44b77898ea93bc0748dd714d15b865a9b97  corestuff-2.7.0.tar.gz"
+sha512sums="9d6b9610bf4c3152c6a610ac6065169ca92d7199976efeb461255d142f354fbacfee61b9e6acf0e24de4f887b0e50aa39f8da8c7a080c6b2bf5359d676213e3d  corestuff-2.7.1.tar.gz"
