--- a/community/coretime/APKBUILD
+++ b/community/coretime/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: rahmanshaber <rahmanshaber@yahoo.com>
 # Maintainer: rahmanshaber <rahmanshaber@yahoo.com>
 pkgname=coretime
-pkgver=2.7.0
+pkgver=2.7.1
 pkgrel=0
 pkgdesc="A time related task manager from the CoreApps family."
 arch="all"
@@ -9,7 +9,7 @@ url="https://gitlab.com/cubocore"
 license="GPL-3.0-or-later"
 depends="qt5-qtsvg"
 makedepends="qt5-qtbase-dev libcprime-dev qt5-qtmultimedia-dev"
-source="$pkgname-$pkgver.tar.gz::https://gitlab.com/cubocore/$pkgname/-/archive/v$pkgver/$pkgname-v$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://gitlab.com/cubocore/coretime/-/archive/v$pkgver/coretime-v$pkgver.tar.gz"
 builddir="$srcdir/$pkgname-v$pkgver"
 options="!check"
 
@@ -21,4 +21,4 @@ build() {
 package() {
 	INSTALL_ROOT="$pkgdir" make install
 }
-sha512sums="f149ab450e7e85c121caf9197322eed1acd906aa5ef72baf057bd8c3fce0bf2eb2cb13a6e445ba1f9c3322a6336d0e6512f756d0ba0d77d3a72b7b1985115d6b  coretime-2.7.0.tar.gz"
+sha512sums="8f3677d93e26102b5e832f2707e8218ff86b51248273dbb377d82c89698b1c138d84ba031228d644eabc91297976478e0839b2b3ac6f804ec2ad0aa00ee1c3fe  coretime-2.7.1.tar.gz"
