--- a/community/libaccounts-glib/APKBUILD
+++ b/community/libaccounts-glib/APKBUILD
@@ -9,7 +9,7 @@ pkgdesc="GLib-based client library for the accounts database"
 license="LGPL-2.1-or-later"
 depends_dev="libxml2-dev sqlite-dev check-dev py3-gobject3 gobject-introspection-dev"
 makedepends="$depends_dev meson ninja vala python3 gtk-doc glib-dev"
-source="https://gitlab.com/accounts-sso/$pkgname/-/archive/VERSION_$pkgver/$pkgname-VERSION_$pkgver.tar.gz"
+source="https://gitlab.com/accounts-sso/libaccounts-glib/-/archive/VERSION_$pkgver/libaccounts-glib-VERSION_$pkgver.tar.gz"
 subpackages="$pkgname-dev $pkgname-doc"
 options="!check" # Requires a systemd feature
 builddir="$srcdir/$pkgname-VERSION_$pkgver"
