--- a/community/kruler/APKBUILD
+++ b/community/kruler/APKBUILD
@@ -8,12 +8,19 @@ url="https://kde.org/applications/graphics/org.kde.kruler"
 pkgdesc="An on-screen ruler for measuring pixels"
 license="GPL-2.0-or-later AND GFDL-1.2-only"
 makedepends="extra-cmake-modules qt5-qtbase-dev qt5-qtx11extras-dev kdoctools-dev ki18n-dev knotifications-dev kwindowsystem-dev kxmlgui-dev"
-source="https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz"
+source="https://download.kde.org/stable/release-service/$pkgver/src/kruler-$pkgver.tar.xz"
 subpackages="$pkgname-doc $pkgname-lang"
 options="!check" # No tests
 
+prepare() {
+	default_prepare
+
+	mkdir "$builddir"/build
+}
+
 build() {
-	cmake \
+	cd "$builddir"/build
+	cmake "$builddir" \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
@@ -21,10 +28,12 @@ build() {
 }
 
 check() {
+	cd "$builddir"/build
 	CTEST_OUTPUT_ON_FAILURE=TRUE ctest
 }
 
 package() {
+	cd "$builddir"/build
 	DESTDIR="$pkgdir" make install
 }
 
